# Bert_Intent_Classfication_Onnx

./: .gitattributes  .gitignore  README.md  fine_tune.py  inference_cockpit_intents.py  inference_onnx_intents.py  invoke_distillbert.py  tokenize_data.py
arm64_build_root/: command
arm64_build_root/src/: CMakeLists.txt  main.cpp
data/: testing_data.csv  training_data.csv  validation_data.csv
distilbert_cockpit_intents/: model.safetensors
distilbert_cockpit_intents_2nd/: config.json  model.safetensors
logs/: events.out.tfevents.1756809157.ip-10-108-24-55.17100.0  events.out.tfevents.1756809256.ip-10-108-24-55.17100.1  events.out.tfevents.1756866883.ip-10-108-24-55.2924.0  events.out.tfevents.1756866964.ip-10-108-24-55.2924.1
onnx_model/: config.json  model.onnx
onnx_runtime_c++/my_tokenizer/: CMakeLists.txt  main.cpp  tokenizer_only.cpp
onnx_runtime_c++/src/: attention_mask.npy  bert_infer  bert_infer.cpp  input_ids.npy  inputs.txt  pre-tokenize4BERT.py
results/checkpoint-35/: optimizer.pt  rng_state.pth  trainer_state.json
